Archive/55fd91452cc3cff96a2b3ece2c43accd-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In lambda function:
main.cpp:7:13: error: no match for ‘operator=’ (operand types are ‘const string {aka const std::basic_string<char>}’ and ‘const char [12]’)
         str = "New string!";
             ^
main.cpp:7:13: note: candidates are:
In file included from /usr/include/c++/4.8/string:52:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/basic_string.h:546:7: note: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::operator=(const std::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       operator=(const basic_string& __str) 
       ^
/usr/include/c++/4.8/bits/basic_string.h:546:7: note:   no known conversion for implicit ‘this’ parameter from ‘const string* {aka const std::basic_string<char>*}’ to ‘std::basic_string<char>*’
/usr/include/c++/4.8/bits/basic_string.h:554:7: note: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::operator=(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       operator=(const _CharT* __s) 
       ^
/usr/include/c++/4.8/bits/basic_string.h:554:7: note:   no known conversion for implicit ‘this’ parameter from ‘const string* {aka const std::basic_string<char>*}’ to ‘std::basic_string<char>*’
/usr/include/c++/4.8/bits/basic_string.h:565:7: note: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::operator=(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       operator=(_CharT __c) 
       ^
/usr/include/c++/4.8/bits/basic_string.h:565:7: note:   no known conversion for argument 1 from ‘const char [12]’ to ‘char’
/usr/include/c++/4.8/bits/basic_string.h:580:7: note: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::operator=(std::basic_string<_CharT, _Traits, _Alloc>&&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>] <near match>
       operator=(basic_string&& __str)
       ^
/usr/include/c++/4.8/bits/basic_string.h:580:7: note:   no known conversion for implicit ‘this’ parameter from ‘const string* {aka const std::basic_string<char>*}’ to ‘std::basic_string<char>*’
/usr/include/c++/4.8/bits/basic_string.h:592:7: note: std::basic_string<_CharT, _Traits, _Alloc>& std::basic_string<_CharT, _Traits, _Alloc>::operator=(std::initializer_list<_Tp>) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       operator=(initializer_list<_CharT> __l)
       ^
/usr/include/c++/4.8/bits/basic_string.h:592:7: note:   no known conversion for argument 1 from ‘const char [12]’ to ‘std::initializer_list<char>’
